Tue May  8 02:22:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, rollout.c: solved problem with calibration widget causing
	crash. Modality disabled, because of an unresolved issue.
	DIALOG_FLAG_NOTIDY is unused??

Mon May  7 23:29:33 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: fix problem with lang settings not being loaded.
	* po/: now fuzzy matching, since po files are ill maintained.

Fri May  4 10:21:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: fix issue with matches loaded twice from command line
	* analysis.c: fix issue with progress bar when running multithreaded
	* export.c, multithread.c: fix WIN32 compiler warnings

Wed May  2 00:00:38 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, bearoff.c, bearoff.h, bearoffdump.c,
	dice.c, eval.c, eval.h, gnubg.c, gnubgmodule.c, gnubgmodule.h,
	gtkfile.c, gtkgame.c, gtkoptions.c, gtkprefs.c, html.c, makebearoff.c,
	matchequity.c, matchequity.h, openurl.c, path.c, path.h, render.c,
	set.c, show.c, sound.c, sound.h, board3d/font3d.c, board3d/misc3d.c:
	remove path.[ch]

Sun Apr 29 01:18:40 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* analysis.c ,backgammon.h ,gnubg.c ,html.c ,latex.c ,play.c
	,postscript.c ,relational.c ,text.c: removed MOVE_TIME

Fri Apr 27 10:50:01 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, analysis.c, analysis.h, backgammon.h, configure.in,
	drawboard.c, formatgs.c, gnubg.c, gnubgmodule.c, gtkboard.c,
	gtkboard.h, gtkgame.c, gtkgame.h, import.c, play.c, set.c, sgf.c,
	show.c, sound.c, sound.h, text.c: removed timecontrol

Fri Apr 27 01:35:36 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* configure.in: cleanup

Fri Apr 27 00:04:02 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* eval.c, gnubg.c, gtkoptions.c, set.c, show.c: removed egyptian rule

Thu Apr 26 23:52:57 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkbearoff.c, gtkbearoff.h, Makefile.am, backgammon.h, bearoff.c,