@@ -2008,6 +2008,7 @@ extern void InitGTK( int *argc, char ***argv )
     int i;
     char *sz;
 
+    gtk_set_locale();
     sz = g_build_filename(PKGDATADIR,  "gnubg.gtkrc", NULL);
     gtk_rc_add_default_file( sz  );
     g_free(sz);
@@ -2218,6 +2219,7 @@ extern void RunGTK( GtkWidget *pwSplash, char *commands, char *python_script, ch
 
 void GtkChangeLanguage()
 {
+	gtk_set_locale();
 	if (pwMain && GTK_WIDGET_REALIZED(pwMain))
 	{
 		reasonExited = RE_LANGUAGE_CHANGE;
