@@ -1,3 +1,7 @@
+Mon May 14 01:10:14 CEST 2007 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c, gtkgame.c, set.c: Fix problems in SetupLang
+
 Tue May  8 02:22:42 CEST 2007 Christian Anthon <anthon@kiku.dk>
 
 	* gtkgame.c, rollout.c: solved problem with calibration widget causing
